FCREPO-3967 - Minimal codecov and jacoco setup (#2107)
* Minimal codecov and jacoco setup

* Merged reporting

* Add add-opens flag for failsafe due to failures in java 17 on ubuntu with all ITs which are asking for it to be added

* Update

* Triggering build

* Turn on debug, reduce number of builds

* Adjust builds

* Disable fedora.info

* Switch url in test to something other than fedora.info

* Reenable all builds

* Add badge for codecov